--- a/www/home.html
+++ b/www/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link href="static/css/index.css" rel="stylesheet">
+    <link href="static/css/index.min.css" rel="stylesheet">
     <link rel="icon" href="static/favicon.ico">
   </head>
   <body>
@@ -36,23 +36,23 @@
           <use fill-opacity="0" stroke-miterlimit="50" stroke-width="4" clip-path="url(&quot;#b&quot;)" xlink:href="#a" opacity=".1" transform="translate(-123 -1911)" />
         </symbol>
         <symbol id="icon-02" viewBox="0 0 279 187">
-          <path fill-rule="evenodd" stroke-width="2" opacity=".102" d="M276.423 180.372h-122.5v-32.5l58-61.249c11.75-12.751 16.75-19.25 16.75-27 0-8.75-5.75-14.501-15.5-14.501-10.25 0-18.25 6.001-23.5 18.251l-38.5-21.5c11.25-26.251 34.75-40.251 61.5-40.251 16.75 0 31 5.001 42.75 15 12 9.751 18 23.25 18 40.501 0 20.249-9.75 36.249-28 55.25l-23.75 24.749h54.75v43.25zm-202.748 3.75c-22.75 0-40.75-8.25-53.5-24.75-12.75-16.749-19-38.75-19-66.499 0-27.751 6.25-49.75 19-66.251 12.75-16.75 30.75-25 53.5-25s40.5 8.25 53.25 25c12.75 16.501 19.25 38.5 19.25 66.251 0 27.749-6.5 49.75-19.25 66.499-12.75 16.5-30.5 24.75-53.25 24.75zm0-139c-18.5 0-27.75 16-27.75 47.751 0 31.75 9.25 47.749 27.75 47.749s27.75-15.999 27.75-47.749c0-31.751-9.25-47.751-27.75-47.751z"
+          <path stroke-width="2" opacity=".102" d="M276.423 180.372h-122.5v-32.5l58-61.249c11.75-12.751 16.75-19.25 16.75-27 0-8.75-5.75-14.501-15.5-14.501-10.25 0-18.25 6.001-23.5 18.251l-38.5-21.5c11.25-26.251 34.75-40.251 61.5-40.251 16.75 0 31 5.001 42.75 15 12 9.751 18 23.25 18 40.501 0 20.249-9.75 36.249-28 55.25l-23.75 24.749h54.75v43.25zm-202.748 3.75c-22.75 0-40.75-8.25-53.5-24.75-12.75-16.749-19-38.75-19-66.499 0-27.751 6.25-49.75 19-66.251 12.75-16.75 30.75-25 53.5-25s40.5 8.25 53.25 25c12.75 16.501 19.25 38.5 19.25 66.251 0 27.749-6.5 49.75-19.25 66.499-12.75 16.5-30.5 24.75-53.25 24.75zm0-139c-18.5 0-27.75 16-27.75 47.751 0 31.75 9.25 47.749 27.75 47.749s27.75-15.999 27.75-47.749c0-31.751-9.25-47.751-27.75-47.751z"
           />
         </symbol>
         <symbol id="icon-03" viewBox="0 0 279 186">
-          <path fill-rule="evenodd" stroke-width="2" opacity=".102" d="M276.688 124.843c0 18.751-6.25 33.251-18.5 43.501s-27.5 15.249-45.75 15.249c-29 0-53-13.498-63-39.499l39-22.249c3.75 12.249 11.75 18.248 24 18.248 12.75 0 19.75-6.499 19.75-16.499s-7-16.25-19.75-16.25h-9.5l-17.25-25.501 28-34.249h-58.75V4.844h113.75v35.249l-29.25 36.001c22.25 7 37.25 24.75 37.25 48.749zm-202.999 58.75c-22.75 0-40.75-8.249-53.5-24.75-12.75-16.749-19-38.749-19-66.499 0-27.75 6.25-49.75 19-66.25 12.75-16.75 30.75-25 53.5-25s40.5 8.25 53.25 25c12.75 16.5 19.25 38.5 19.25 66.25s-6.5 49.75-19.25 66.499c-12.75 16.501-30.5 24.75-53.25 24.75zm0-139c-18.5 0-27.75 16.001-27.75 47.751 0 31.75 9.25 47.749 27.75 47.749s27.75-15.999 27.75-47.749-9.25-47.751-27.75-47.751z"
+          <path stroke-width="2" opacity=".102" d="M276.688 124.843c0 18.751-6.25 33.251-18.5 43.501s-27.5 15.249-45.75 15.249c-29 0-53-13.498-63-39.499l39-22.249c3.75 12.249 11.75 18.248 24 18.248 12.75 0 19.75-6.499 19.75-16.499s-7-16.25-19.75-16.25h-9.5l-17.25-25.501 28-34.249h-58.75V4.844h113.75v35.249l-29.25 36.001c22.25 7 37.25 24.75 37.25 48.749zm-202.999 58.75c-22.75 0-40.75-8.249-53.5-24.75-12.75-16.749-19-38.749-19-66.499 0-27.75 6.25-49.75 19-66.25 12.75-16.75 30.75-25 53.5-25s40.5 8.25 53.25 25c12.75 16.5 19.25 38.5 19.25 66.25s-6.5 49.75-19.25 66.499c-12.75 16.501-30.5 24.75-53.25 24.75zm0-139c-18.5 0-27.75 16.001-27.75 47.751 0 31.75 9.25 47.749 27.75 47.749s27.75-15.999 27.75-47.749-9.25-47.751-27.75-47.751z"
           />
         </symbol>
         <symbol id="icon-04" viewBox="0 0 299 187">
-          <path fill-rule="evenodd" stroke-width="2" opacity=".102" d="M278.647 153.64v26.751h-44.5V153.64h-76.75v-40.749l52.25-107.499h49.5l-52.75 107.499h27.75V81.392h44.5v31.499h17.5v40.749h-17.5zM73.653 184.141c-22.75 0-40.75-8.25-53.5-24.749-12.75-16.751-19-38.751-19-66.5 0-27.751 6.25-49.75 19-66.25 12.75-16.751 30.75-25 53.5-25s40.5 8.249 53.25 25c12.75 16.5 19.25 38.499 19.25 66.25 0 27.749-6.5 49.749-19.25 66.5-12.75 16.499-30.5 24.749-53.25 24.749zm0-138.999c-18.5 0-27.75 15.999-27.75 47.75 0 31.749 9.25 47.75 27.75 47.75s27.75-16.001 27.75-47.75c0-31.751-9.25-47.75-27.75-47.75z"
+          <path stroke-width="2" opacity=".102" d="M278.647 153.64v26.751h-44.5V153.64h-76.75v-40.749l52.25-107.499h49.5l-52.75 107.499h27.75V81.392h44.5v31.499h17.5v40.749h-17.5zM73.653 184.141c-22.75 0-40.75-8.25-53.5-24.749-12.75-16.751-19-38.751-19-66.5 0-27.751 6.25-49.75 19-66.25 12.75-16.751 30.75-25 53.5-25s40.5 8.249 53.25 25c12.75 16.5 19.25 38.499 19.25 66.25 0 27.749-6.5 49.749-19.25 66.5-12.75 16.499-30.5 24.749-53.25 24.749zm0-138.999c-18.5 0-27.75 15.999-27.75 47.75 0 31.749 9.25 47.75 27.75 47.75s27.75-16.001 27.75-47.75c0-31.751-9.25-47.75-27.75-47.75z"
           />
         </symbol>
         <symbol id="icon-05" viewBox="0 0 286 187">
-          <path fill-rule="evenodd" stroke-width="2" opacity=".102" d="M211.478 67.07h12.5c17.25 0 31.5 5 42.75 15 11.5 10.001 17.25 24.25 17.25 42.501 0 18.999-6.25 33.749-18.5 44.25-12.25 10.25-27.75 15.5-46 15.5-30.75 0-54.5-13.25-64.75-39.5l39-22.25c3.75 12.249 12.25 18.25 25.75 18.25 12.75 0 19.75-6.251 19.75-16.25 0-10.25-7.25-16.251-19-16.251h-56l7.25-102.75h103v42.75h-61.75l-1.25 18.75zm-137.5 117.251c-22.75 0-40.75-8.25-53.5-24.751-12.75-16.749-19-38.749-19-66.499 0-27.751 6.25-49.751 19-66.251 12.75-16.75 30.75-25 53.5-25s40.5 8.25 53.25 25c12.75 16.5 19.25 38.5 19.25 66.251 0 27.75-6.5 49.75-19.25 66.499-12.75 16.501-30.5 24.751-53.25 24.751zm0-139.001c-18.5 0-27.75 16-27.75 47.751 0 31.749 9.25 47.75 27.75 47.75s27.75-16.001 27.75-47.75c0-31.751-9.25-47.751-27.75-47.751z"
+          <path stroke-width="2" opacity=".102" d="M211.478 67.07h12.5c17.25 0 31.5 5 42.75 15 11.5 10.001 17.25 24.25 17.25 42.501 0 18.999-6.25 33.749-18.5 44.25-12.25 10.25-27.75 15.5-46 15.5-30.75 0-54.5-13.25-64.75-39.5l39-22.25c3.75 12.249 12.25 18.25 25.75 18.25 12.75 0 19.75-6.251 19.75-16.25 0-10.25-7.25-16.251-19-16.251h-56l7.25-102.75h103v42.75h-61.75l-1.25 18.75zm-137.5 117.251c-22.75 0-40.75-8.25-53.5-24.751-12.75-16.749-19-38.749-19-66.499 0-27.751 6.25-49.751 19-66.251 12.75-16.75 30.75-25 53.5-25s40.5 8.25 53.25 25c12.75 16.5 19.25 38.5 19.25 66.251 0 27.75-6.5 49.75-19.25 66.499-12.75 16.501-30.5 24.751-53.25 24.751zm0-139.001c-18.5 0-27.75 16-27.75 47.751 0 31.749 9.25 47.75 27.75 47.75s27.75-16.001 27.75-47.75c0-31.751-9.25-47.751-27.75-47.751z"
           />
         </symbol>
         <symbol id="icon-06" viewBox="0 0 293 187">
-          <path fill-rule="evenodd" stroke-width="2" opacity=".102" d="M275.474 81.32c10.25 11.001 15.25 24.751 15.25 41.25 0 18.25-6 33-18.25 44.501-12.25 11.499-28.25 17.249-48 17.249s-35.75-5.75-48-17.249c-12.25-11.501-18.25-26.251-18.25-44.501 0-13.75 3.75-25.749 11-36.251l51.75-80.749h50.75l-37 55.75c17 2.251 30.5 8.751 40.75 20zm-35.5 25.751c-4-3.751-9.25-5.501-15.5-5.501s-11.5 1.75-15.5 5.501c-4 3.75-6 8.75-6 15.499 0 13.251 8.75 20.749 21.5 20.749 12.25 0 21.5-7.749 21.5-20.749 0-6.749-2-11.749-6-15.499zM74.479 184.32c-22.75 0-40.75-8.249-53.5-24.749-12.75-16.751-19-38.75-19-66.501 0-27.75 6.25-49.749 19-66.251 12.75-16.748 30.75-24.999 53.5-24.999s40.5 8.251 53.25 24.999c12.75 16.502 19.25 38.501 19.25 66.251 0 27.751-6.5 49.75-19.25 66.501-12.75 16.5-30.5 24.749-53.25 24.749zm0-139c-18.5 0-27.75 16-27.75 47.75s9.25 47.75 27.75 47.75 27.75-16 27.75-47.75-9.25-47.75-27.75-47.75z"
+          <path stroke-width="2" opacity=".102" d="M275.474 81.32c10.25 11.001 15.25 24.751 15.25 41.25 0 18.25-6 33-18.25 44.501-12.25 11.499-28.25 17.249-48 17.249s-35.75-5.75-48-17.249c-12.25-11.501-18.25-26.251-18.25-44.501 0-13.75 3.75-25.749 11-36.251l51.75-80.749h50.75l-37 55.75c17 2.251 30.5 8.751 40.75 20zm-35.5 25.751c-4-3.751-9.25-5.501-15.5-5.501s-11.5 1.75-15.5 5.501c-4 3.75-6 8.75-6 15.499 0 13.251 8.75 20.749 21.5 20.749 12.25 0 21.5-7.749 21.5-20.749 0-6.749-2-11.749-6-15.499zM74.479 184.32c-22.75 0-40.75-8.249-53.5-24.749-12.75-16.751-19-38.75-19-66.501 0-27.75 6.25-49.749 19-66.251 12.75-16.748 30.75-24.999 53.5-24.999s40.5 8.251 53.25 24.999c12.75 16.502 19.25 38.501 19.25 66.251 0 27.751-6.5 49.75-19.25 66.501-12.75 16.5-30.5 24.749-53.25 24.749zm0-139c-18.5 0-27.75 16-27.75 47.75s9.25 47.75 27.75 47.75 27.75-16 27.75-47.75-9.25-47.75-27.75-47.75z"
           />
         </symbol>
         <symbol id="icon-advantage-1" viewBox="0 0 67 67">
@@ -566,6 +566,12 @@
           <path fill-rule="evenodd" d="M12 10a2 2 0 1 1 .001 3.999A2 2 0 0 1 12 10z" />
           <path fill-rule="evenodd" d="M34 12a2 2 0 1 1-3.999.001A2 2 0 0 1 34 12z" />
         </symbol>
+        <symbol id="icon-mobile-top" viewBox="0 0 9 34">
+          <path fill-rule="evenodd" d="M8 5.031H0V4h1V2.969h1V2h1V1h1V0h1.031v1H6v1h.969v.969H8V4h1v1.031H8z" />
+          <path fill-rule="evenodd" d="M3.891 20c1.113 0 2.015.888 2.015 1.984s-.902 1.985-2.015 1.985c-1.114 0-2.016-.889-2.016-1.985S2.777 20 3.891 20z" />
+          <path fill-rule="evenodd" d="M3.891 10a2.015 2.015 0 1 1 0 4.03 2.015 2.015 0 0 1 0-4.03z" />
+          <path fill-rule="evenodd" d="M3.891 29.969a2.015 2.015 0 1 1 0 4.03 2.015 2.015 0 0 1 0-4.03z" />
+        </symbol>
         <symbol id="icon-skype" viewBox="0 0 512 512">
           <style>
             .st0 {
@@ -727,6 +733,9 @@
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-menu-close"></use>
             </svg>
           </div>
+          <div class="header__mobile-chat-btn">
+            <a href="#!">ЧАТ С БОТОМ</a>
+          </div>
         </div>
       </div>
     </header>
@@ -854,6 +863,9 @@
               </div>
               <div data-bot="last">
                 <p>Ну что ты начинаешь, оставь свой e-mail. Я еду с вином.</p>
+              </div>
+              <div data-bot="submit">
+                <p>Спасибо, заявка принята на указанную почту:</p>
               </div>
             </div>
             <div class="chat__data-btn">
@@ -1102,6 +1114,10 @@
         <div data-line></div>
         <div class="advantage__container container">
           <div class="advantage__title">Наши приемущества</div>
+          <div class="advantage__list-counter">
+            <div class="advantage__list-counter-current"></div>
+            <div class="advantage__list-counter-total"></div>
+          </div>
           <div class="advantage__list">
             <div class="advantage__list-item">
               <div class="advantage__list-item-row">
@@ -1207,7 +1223,7 @@
               </a>
             </div>
             <div class="example__slider-chat">
-              <a class="example__slider-chat-text" href="#!">Поговорить с ботом</a>
+              <a class="example__slider-chat-text" href="#!" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</a>
               <a class="example__slider-chat-icon" href="#!">
                 <svg class="icon icon-telegram">
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
@@ -1225,9 +1241,9 @@
                   <div class="example__slider-left">
                     <div class="example__slider-image">
                       <img class="example__slider-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
-                      <svg class="example__slider-image-svg" viewBox="0 0 393.2 373.7" preserveAspectRatio="none">
-                        <path d="M393.2,179.6v5.2C393.2,183.1,393.2,181.3,393.2,179.6z"></path>
-                        <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393.2V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
+                      <svg class="example__slider-image-svg" viewBox="0 0 393 373.7" preserveAspectRatio="none">
+                        <path d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z"></path>
+                        <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
                       </svg>
                     </div>
                   </div>
@@ -1247,9 +1263,9 @@
                   <div class="example__slider-left">
                     <div class="example__slider-image">
                       <img class="example__slider-img" src="static/img/content/loc-slider-2.jpg" alt="image" title="" />
-                      <svg class="example__slider-image-svg" viewBox="0 0 393.2 373.7" preserveAspectRatio="none">
-                        <path d="M393.2,179.6v5.2C393.2,183.1,393.2,181.3,393.2,179.6z"></path>
-                        <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393.2V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
+                      <svg class="example__slider-image-svg" viewBox="0 0 393 373.7" preserveAspectRatio="none">
+                        <path d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z"></path>
+                        <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
                       </svg>
                     </div>
                   </div>
@@ -1264,9 +1280,9 @@
                   <div class="example__slider-left">
                     <div class="example__slider-image">
                       <img class="example__slider-img" src="static/img/content/loc-slider-3.jpg" alt="image" title="" />
-                      <svg class="example__slider-image-svg" viewBox="0 0 393.2 373.7" preserveAspectRatio="none">
-                        <path d="M393.2,179.6v5.2C393.2,183.1,393.2,181.3,393.2,179.6z"></path>
-                        <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393.2V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
+                      <svg class="example__slider-image-svg" viewBox="0 0 393 373.7" preserveAspectRatio="none">
+                        <path d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z"></path>
+                        <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
                       </svg>
                     </div>
                   </div>
@@ -1283,7 +1299,11 @@
       <section class="top" id="top" data-scroll-section="data-scroll-section">
         <div data-line></div>
         <div class="top__container container">
-          <div class="top__title">Интересные статьи о ботах</div>
+          <div class="top__title" data-text-mobile="Статьи о ботах">Интересные статьи о ботах</div>
+          <div class="top__list-counter">
+            <div class="top__list-counter-current"></div>
+            <div class="top__list-counter-total"></div>
+          </div>
           <div class="top__list">
             <div class="top__list-item">
               <a class="card" href="#!">
@@ -1371,6 +1391,11 @@
     <!-- Footer-->
     <footer class="footer" id="footer" data-scroll-section="data-scroll-section">
       <div data-line></div>
+      <div class="footer__mobile-top js-to-top">
+        <svg class="icon icon-mobile-top">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-mobile-top"></use>
+        </svg>
+      </div>
       <div class="footer__round-top">
         <svg viewBox="0 0 1282 81">
           <path d="M0,80.5h641.4C320.9,80.5,0,0.5,0,0.5V80.5z" />
@@ -1466,6 +1491,6 @@
       </div>
     </footer>
     <!-- Scripts-->
-    <script src="static/js/index.js"></script>
+    <script src="static/js/index.min.js"></script>
   </body>
 </html>
