--- a/www/home.html
+++ b/www/home.html
@@ -804,6 +804,9 @@
                 <svg class="icon icon-close">
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-close"></use>
                 </svg>
+                <svg class="icon icon-menu-close">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-menu-close"></use>
+                </svg>
               </div>
             </div>
             <div class="chat__content">
@@ -851,8 +854,8 @@
             <div class="chat__data-bot">
               <div data-bot="0">
                 <p>Привет, Человек!</p>
-                <!--p Меня зовут Unibot и я тот, кто больше расскажет тебе о крутых возможностях чатботов!-->
-                <!--p Ну, что ж, начнем с простого. Как дела?-->
+                <p>Меня зовут Unibot и я тот, кто больше расскажет тебе о крутых возможностях чатботов!</p>
+                <p>Ну, что ж, начнем с простого. Как дела?</p>
               </div>
               <div data-bot="1">
                 <p>Текст бота №1</p>
