--- a/www/home.html
+++ b/www/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link href="static/css/index.css" rel="stylesheet">
+    <link href="static/css/index.min.css" rel="stylesheet">
     <link rel="icon" href="static/favicon.ico">
   </head>
   <body>
@@ -677,7 +677,7 @@
     <!-- Header-->
     <header class="header">
       <div class="header__container container">
-        <a class="header__logo" href="#!">
+        <a class="header__logo" href="home.html">
           <img class="header__logo-img" src="static/img/logo.svg" alt="image" title="" />
         </a>
         <div class="header__right">
@@ -897,8 +897,8 @@
         </div>
         <div class="how__round-bottom">
           <svg viewBox="0 0 1282 81">
-            <path d="M0,80.5h641.4C320.9,80.5,0,0.5,0,0.5V80.5z" />
-            <path d="M1281,0.5c0,0-319.6,80-639.6,80H1282v-80H1281z" /> </svg>
+            <path d="M0,81h641.4C320.9,81,0,0,0,0V81z" />
+            <path d="M1282,0c0,0-319.6,81-639.6,81H1282v-81H1282z" /> </svg>
         </div>
         <svg class="is-hidden">
           <path id="path-how-1" d="M69.005,75.918 C139.703,30.693 249.171,-46.600 345.529,37.443 C441.887,121.484 490.431,200.368 418.726,261.891 C347.022,323.412 158.055,381.676 60.871,287.542 C-36.312,193.401 -1.694,121.143 69.005,75.918 Z"></path>
@@ -1313,7 +1313,7 @@
                 <div class="card__image">
                   <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
                   <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
-                    <path d="M0,0v219h300V0H0z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
+                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
                   </svg>
                 </div>
                 <div class="card__title">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</div>
@@ -1335,7 +1335,7 @@
                 <div class="card__image">
                   <img class="card__image-img" src="static/img/content/loc-slider-2.jpg" alt="image" title="" />
                   <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
-                    <path d="M0,0v219h300V0H0z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
+                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
                   </svg>
                 </div>
                 <div class="card__title">Как создать чат-бота, который ухудшит ваш бизнес</div>
@@ -1357,7 +1357,7 @@
                 <div class="card__image">
                   <img class="card__image-img" src="static/img/content/loc-slider-3.jpg" alt="image" title="" />
                   <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
-                    <path d="M0,0v219h300V0H0z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
+                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
                   </svg>
                 </div>
                 <div class="card__title">Зачем бизнесу нужен чат-бот?</div>
@@ -1401,8 +1401,8 @@
       </div>
       <div class="footer__round-top">
         <svg viewBox="0 0 1282 81">
-          <path d="M0,80.5h641.4C320.9,80.5,0,0.5,0,0.5V80.5z" />
-          <path d="M1281,0.5c0,0-319.6,80-639.6,80H1282v-80H1281z" /> </svg>
+          <path d="M0,81h641.4C320.9,81,0,0,0,0V81z" />
+          <path d="M1282,0c0,0-319.6,81-639.6,81H1282v-81H1282z" /> </svg>
       </div>
       <div class="footer__container container">
         <div class="footer__title">Контакты</div>
@@ -1435,25 +1435,25 @@
             </div>
             <div class="footer__list-soc footer__list-text">
               <div class="footer__list-soc-icon-wrap">
-                <div class="soc-icon soc-icon_default footer__list-soc-icon">
+                <a class="soc-icon soc-icon_default footer__list-soc-icon" href="#!">
                   <svg class="icon icon-telegram">
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
                   </svg>
-                </div>
+                </a>
               </div>
               <div class="footer__list-soc-icon-wrap">
-                <div class="soc-icon soc-icon_default footer__list-soc-icon">
+                <a class="soc-icon soc-icon_default footer__list-soc-icon" href="#!">
                   <svg class="icon icon-fb">
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-fb"></use>
                   </svg>
-                </div>
+                </a>
               </div>
               <div class="footer__list-soc-icon-wrap">
-                <div class="soc-icon soc-icon_default footer__list-soc-icon">
+                <a class="soc-icon soc-icon_default footer__list-soc-icon" href="#!">
                   <svg class="icon icon-insta">
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-insta"></use>
                   </svg>
-                </div>
+                </a>
               </div>
             </div>
           </div>
@@ -1494,6 +1494,6 @@
       </div>
     </footer>
     <!-- Scripts-->
-    <script src="static/js/index.js"></script>
+    <script src="static/js/index.min.js"></script>
   </body>
 </html>
